--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -1,5 +1,7 @@
+@import '../../checkbox//src/checkbox.component.theme';
 @import '../../icon/src/icon.component.theme';
 
 @mixin icc-theme-components() {
+  @include icc-checkbox-theme();
   @include icc-icon-theme();
 }
