--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div class="icc-top-nav-bar"> Top Nav Bar </div>
+<div class="icc-top-nav-bar"> Top Nav Bar
+
+
+
+</div>
 
 <div class="icc-main-container">
   <div class="icc-left-side-bar">
@@ -17,6 +21,13 @@
 </div>
 
 <!--
+  <div (click)="toggleTheme()">
+    Toggle Theme
+  </div>
+
+  <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+  <icc-about></icc-about>
+ <a sun-dropdown-item (click)="toggleTheme()">Toggle Theme</a>
 
     <icc-checkbox>Checked</icc-checkbox>
     <div></div>
