--- a/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
@@ -13,7 +13,7 @@
   border-color: grey;
   border-width: 0px 0px 1px 1px;
   padding: 0 10px;
-  line-height: 23px;
+  height: 24px;
 
  &.expandable-row {
    justify-content: center;
