--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="icc-top-nav-bar"> Top Nav Bar
 
-
-
+  <icc-about></icc-about>
+  <div (click)="toggleTheme()">
+    Toggle Theme
+  </div>
+  <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
 </div>
 
 <div class="icc-main-container">
