--- a/projects/icc/about/src/_about.component.theme.scss
+++ b/projects/icc/about/src/_about.component.theme.scss
@@ -1,26 +1,7 @@
 // this is theme test
 @mixin icc-about-theme() {
   .icc-about-color{
-    color: cyan;
-    background-color: black;
+    color: icc-theme(color-primary-default);
+    background-color: icc-theme(color-basic-100);
   }
 }
-
-/*
-
-  icc-about {
-    .icc-about-color{
-      color: cyan;
-      background-color: black;
-    }
-  }
-@mixin test-component-theme($theme) {
-  $primary: map-get($theme, primary);
-  .test {
-    background: mat-color($primary);
-  }
-  .test1 {
-    background: orange;
-  }
-}
-*/
