--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -12,38 +12,28 @@
       [attr.aria-expanded]="accordionItem.expanded"
       [attr.aria-controls]="'accordion-body-' + index">
       <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
-        {{ item.label }}
+        {{ item.title }}
         <span class="example-accordion-item-description">
           <i *ngIf="accordionItem.expanded" class="fa-solid fa-chevron-up"></i>
           <i *ngIf="!accordionItem.expanded" class="fa-solid fa-chevron-down"></i>
         </span>
       </div>
 
-      @for (menu of item.items; track menu; let j = $index) {
+      <icc-menu *ngIf="accordionItem.expanded" [items]="item.items"></icc-menu>
+      <!--
+
+              @for (menu of item.items; track menu; let j = $index) {
         <div
           class="example-accordion-item-body"
           role="region"
           [style.display]="accordionItem.expanded ? '' : 'none'"
           [attr.id]="'accordion-body-' + index"
           [attr.aria-labelledby]="'accordion-header-' + index">
-          {{menu.label}}
+          {{menu.title}}
         </div>
 
       }
-      <!--
 
-      <div
-        class="example-accordion-item-body"
-        role="region"
-        [style.display]="accordionItem.expanded ? '' : 'none'"
-        [attr.id]="'accordion-body-' + index"
-        [attr.aria-labelledby]="'accordion-header-' + index">
-
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis
-        excepturi incidunt ipsum deleniti labore, tempore non nam doloribus blanditiis
-        veritatis illo autem iure aliquid ullam rem tenetur deserunt velit culpa?
-
-      </div>
             -->
 
     </cdk-accordion-item>
