--- a/projects/icc-demo/src/app/app.component.scss
+++ b/projects/icc-demo/src/app/app.component.scss
@@ -20,7 +20,9 @@
       padding-right: 10px;
     }
     .icc-center-view {
+      display: flex;
       width: 100%;
+      height: -webkit-fill-available;
     }
   }
 
