--- a/projects/icc-demo/src/app/app.component.scss
+++ b/projects/icc-demo/src/app/app.component.scss
@@ -5,7 +5,7 @@
 
   .icc-top-nav-bar {
     display: flex;
-    //height: 50px;
+    height: 50px;
     text-align: center;
     justify-content: center;
     //color: Blue;
