--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -1,5 +1,6 @@
 @import '../../checkbox/src/checkbox.component.theme';
 @import '../../icon/src/icon.component.theme';
+@import '../../layout/src/layout.component.theme';
 @import '../../menu//src/menu-item/menu-item.component.theme';
 
 @import '../../about/src/about.component.theme';
@@ -9,4 +10,5 @@
   @include icc-checkbox-theme();
   @include icc-menu-item-theme();
   @include icc-icon-theme();
+  @include icc-layout-theme();
 }
