--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -44,6 +44,18 @@ $theme: (
 
   // Panel Colors
   icc-panel-border-color: #f6f1ed,
+
+  // Text colors
+  text-basic-color: color-basic-default,
+  text-alternative-color-1: color-basic-default,
+  text-alternative-color-2: color-basic-default,
+  text-alternative-color-3: #dedede,
+  text-alternative-color-4: #191919,
+  text-primary-color: color-primary-default,
+  text-secondary-color: #797979,
+  text-alternative-color-green: #3c763d,
+  text-alternative-color-red: #a94442,
+  text-alternative-color-yellow: #8a6d3b,
 );
 
 $icc-themes: icc-register-theme($theme, light);
