--- a/projects/icc/theme/src/themes/_mapping.scss
+++ b/projects/icc/theme/src/themes/_mapping.scss
@@ -19,4 +19,5 @@ $icc-mapping: (
   icon-danger-color: color-danger-default,
   icon-success-color: color-success-default,
 
+  layout-background-color: background-basic-color-1,
 );
