--- a/projects/icc/grid/src/components/grid-header/grid-header.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.scss
@@ -6,6 +6,10 @@
   //@include display-grid();
   //border-bottom: 2px solid $c_primary;
 
+  icc-grid-header-item:last-child {
+    border-right: solid 1px grey;
+  }
+
   .icc-header-row-select {
     display: flex;
     height: 30px;
