--- a/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
@@ -9,9 +9,7 @@
   //color: $text-color;
   //border-bottom: 1px solid $border-color;
 
-  border-style: solid;
-  border-color: grey;
-  border-width: 0px 0px 1px 1px;
+
   padding: 0 10px;
   height: 24px;
 
@@ -21,6 +19,11 @@
  }
 
  /*
+   .example-accordion-item:last-child {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+
   @media screen and (max-width: 769px) {
     padding: 0 $size-s;
   }*/
