--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -1,4 +1,5 @@
 @import '../../checkbox/src/checkbox.component.theme';
+@import '../../grid/src/grid.component.theme';
 @import '../../icon/src/icon.component.theme';
 @import '../../layout/src/layout.component.theme';
 @import '../../menu//src/menu-item/menu-item.component.theme';
@@ -8,6 +9,7 @@
 @mixin icc-theme-components() {
   @include icc-about-theme();
   @include icc-checkbox-theme();
+  @include icc-grid-theme();
   @include icc-menu-item-theme();
   @include icc-icon-theme();
   @include icc-layout-theme();
