--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
@@ -3,15 +3,15 @@
   width: 100%;
   height: 30px;
   align-items: center;
-  border-top: 1px solid grey;
+
   .icc-text-filter {
+    // TODO input border color
     display: flex;
     width: 100%;
     padding: 0 10px;
+
     input {
       width: 100%;
     }
   }
 }
-
-
