--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   height: 32px;
-  background-color: gray;
+  background-color: gray; // TODO color
   justify-content: left;
   align-items: center;
   padding: 0 10px;
