--- a/projects/icc/grid/src/grid.component.scss
+++ b/projects/icc/grid/src/grid.component.scss
@@ -7,9 +7,8 @@
   .icc-grid-toolbar {
     display: flex;
     height: 32px;
-    background-color: gray;
+    background-color: gray; // TODO grid toolbar and footer later
     align-items: center;
     justify-content: center;
-    //text-align: center;
   }
 }
