--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -9,15 +9,16 @@
     icc-layout-header {
       display: flex;
       height: 50px;
-      text-align: center;
       justify-content: center;
+      align-items: center;
     }
 
     icc-layout-footer {
+      display: flex;
       height: 30px;
-      padding-top: 15px;
-      text-align: center;
-      color: orange;
+      justify-content: center;
+      align-items: center;
+      //color: orange;
     }
   }
 
@@ -25,6 +26,5 @@
     display: flex;
     height: -webkit-fill-available;
     width: 100%;
-    padding-right: 5px;
   }
 }
