--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -56,6 +56,11 @@ $theme: (
   text-alternative-color-green: #3c763d,
   text-alternative-color-red: #a94442,
   text-alternative-color-yellow: #8a6d3b,
+
+  //grid
+  icc-grid-row-odd-cell-background-color: #191919,
+  icc-grid-row-even-cell-background-color: #282828,
+
 );
 
 $icc-themes: icc-register-theme($theme, dark);
