--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -58,9 +58,9 @@ $theme: (
   text-alternative-color-yellow: #8a6d3b,
 
   //grid
-  icc-grid-row-odd-cell-background-color: #fbfbfb,
-  icc-grid-row-even-cell-background-color: #ffffff,
-
+  icc-grid-row-odd-background-color: #fbfbfb,
+  icc-grid-row-even-background-color: #ffffff,
+  icc-grid-row-hover-background-color: #fdeede,
 
 );
 
