--- a/projects/icc/theme/src/themes/_custom.scss
+++ b/projects/icc/theme/src/themes/_custom.scss
@@ -58,6 +58,7 @@ $theme: (
   text-alternative-color-yellow: #8a6d3b,
 
   //grid
+  icc-grid-header-background-color: #353535,
   icc-grid-row-odd-background-color: #191919,
   icc-grid-row-even-background-color: #282828,
   icc-grid-row-hover-background-color: #1c2b41,
