--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -58,6 +58,7 @@ $theme: (
   text-alternative-color-yellow: #8a6d3b,
 
   //grid
+  icc-grid-header-background-color: #f6f1ed,
   icc-grid-row-odd-background-color: #fbfbfb,
   icc-grid-row-even-background-color: #ffffff,
   icc-grid-row-hover-background-color: #fdeede,
