--- a/projects/icc/accordion/src/accordion.component.scss
+++ b/projects/icc/accordion/src/accordion.component.scss
@@ -25,26 +25,31 @@
   }
 
   .example-accordion-item-header {
-    padding: 16px;
+    padding: 8px 10px;
   }
 
-  .example-accordion-item-body {
-    padding: 16px 16px 16px 32px;
-  }
 
   .example-accordion-item-header:hover {
     cursor: pointer;
     background-color: #eee;
   }
 
-  .example-accordion-item:first-child {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+  /*
+    .example-accordion-item-body {
+    padding: 16px 16px 16px 32px;
   }
 
-  .example-accordion-item:last-child {
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
+  .example-accordion-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.example-accordion-item:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+*/
+
 
 }
