--- a/projects/icc/menu/src/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/menu-item/menu-item.component.scss
@@ -1,3 +1,15 @@
+:host {
+  display: flex;
+  // flex-direction: column;
+  height: 32px;
+  padding: 0px 15px;
+  width: 100%;
+  a {
+    width: 100%;
+  }
+}
+
+/*
 ::ng-deep .icc-menu-item.menu-item-separator {
   margin-top: 0.3125rem;
   margin-bottom: 0.3125rem;
@@ -31,3 +43,4 @@ ul.icc-menu-items {
 a {
   white-space: nowrap;
 }
+*/
