--- a/projects/icc/menu/src/menu.component.html
+++ b/projects/icc/menu/src/menu.component.html
@@ -1,13 +1,6 @@
-<ul class="icc-menu-items">
-  <ng-container *ngFor="let item of items">
-    <li icc-menu-item *ngIf="!item.hidden"
-      [menuItem]="item"
-      [menuType]="menuType"
-      class="icc-menu-item header-menu-item"
-      [ngClass]="item.class!"
-      [menuItemTpl]="menuItemTpl"
-      (click)="itemClicked($event, item)"
-      (selectItem)="onSelectItem($event)">
-    </li>
-  </ng-container>
-</ul>
+<ng-container *ngFor="let item of items">
+  <span icc-menu-item *ngIf="!item.hidden" [menuItem]="item" [menuType]="menuType"
+    class="icc-menu-item header-menu-item" [ngClass]="item.class!" [menuItemTpl]="menuItemTpl"
+    (click)="itemClicked($event, item)" (selectItem)="onSelectItem($event)">
+  </span>
+</ng-container>
