--- a/projects/icc/menu/src/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/menu-item/menu-item.component.scss
@@ -1,14 +1,21 @@
 :host {
   display: flex;
-  // flex-direction: column;
   height: 32px;
   padding: 0px 15px;
   width: 100%;
-  a {
-    width: 100%;
-  }
-}
 
+  a {
+      width: 100%;
+      border: none;
+
+
+    }
+  }
+
+  :-webkit-any-link {
+    color: inherit;
+    text-decoration: none;
+  }
 /*
 ::ng-deep .icc-menu-item.menu-item-separator {
   margin-top: 0.3125rem;
