--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -1,16 +1,15 @@
+@import '../../about/src/about.component.theme';
 @import '../../checkbox/src/checkbox.component.theme';
 @import '../../grid/src/grid.component.theme';
 @import '../../icon/src/icon.component.theme';
 @import '../../layout/src/layout.component.theme';
-@import '../../menu//src/menu-item/menu-item.component.theme';
-
-@import '../../about/src/about.component.theme';
+@import '../../menu//src/menu.component.theme';
 
 @mixin icc-theme-components() {
   @include icc-about-theme();
   @include icc-checkbox-theme();
   @include icc-grid-theme();
-  @include icc-menu-item-theme();
   @include icc-icon-theme();
   @include icc-layout-theme();
+  @include icc-menu-theme();
 }
