--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -12,7 +12,7 @@
       [attr.aria-expanded]="accordionItem.expanded"
       [attr.aria-controls]="'accordion-body-' + index">
       <div class="example-accordion-item-header" (click)="accordionItem.toggle()">
-        {{ item.title }}
+        {{ getTitle(item) }}
         <span class="example-accordion-item-description">
           <i *ngIf="accordionItem.expanded" class="fa-solid fa-chevron-up"></i>
           <i *ngIf="!accordionItem.expanded" class="fa-solid fa-chevron-down"></i>
