--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -6,5 +6,5 @@
 >
 
   <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon" ></icc-icon>
-  <span class="icc-menu-title"> {{ menuItem.title }} </span>
+  <span class="icc-menu-title"> {{ title }} </span>
 </a>
