--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -10,6 +10,14 @@
 
   <div class="icc-left-side-bar">
     <icc-accordion [items]="items"></icc-accordion>
+
+    <icc-checkbox
+    [checked]="true"
+    (change)="onCheckboxChange($event)"
+    >
+    <icc-icon config="exclamation-circle" ></icc-icon>
+    <span > Test Checkbox </span>
+  </icc-checkbox>
   </div>
   <div class="icc-center-view">
     <router-outlet></router-outlet>
