--- a/projects/icc/checkbox/src/checkbox.component.html
+++ b/projects/icc/checkbox/src/checkbox.component.html
@@ -1,12 +1,11 @@
-<label>
+<label (click)="$event.stopPropagation()">
   <input #inputEl
     type="checkbox"
     class="cdk-visually-hidden"
     [checked]="checked"
     [disabled]="disabled"
     [indeterminate]="indeterminate"
-    (change)="updateValueAndIndeterminate($event)"
-    (click)="$event.stopPropagation()">
+    (change)="updateValueAndIndeterminate($event)">
     <!--
 
 
