--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -8,12 +8,10 @@
   <span class="icc-menu-title"> {{ title }} </span>
 </a>
 
-<div *ngIf="menuItem.checkbox" (click)="onCheckboxClick($event)">
-  <icc-checkbox
-    [checked]="!!menuItem.checked"
-    (change)="onCheckboxChange($event)"
-    >
-    <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon" ></icc-icon>
-    <span class="icc-menu-title"> {{ title }} </span>
-  </icc-checkbox>
-</div>
+<icc-checkbox *ngIf="menuItem.checkbox"
+  [checked]="!!menuItem.checked"
+  (change)="onCheckboxChange($event)"
+  >
+  <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon" ></icc-icon>
+  <span class="icc-menu-title"> {{ title }} </span>
+</icc-checkbox>
