--- a/projects/icc/menu/src/menu.component.html
+++ b/projects/icc/menu/src/menu.component.html
@@ -2,6 +2,7 @@
   <icc-menu-item *ngIf="!item.hidden"
     [menuItem]="item"
     (click)="itemClicked($event, item)"
+    (iccCheckboxChange)="onCheckboxChange($event)"
   >
   </icc-menu-item>
 </ng-container>
