--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -15,3 +15,8 @@
   <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon" ></icc-icon>
   <span class="icc-menu-title"> {{ title }} </span>
 </icc-checkbox>
+
+<div *ngIf="!menuItem.link && !menuItem.checkbox" >
+  <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon" ></icc-icon>
+  <span class="icc-menu-title"> {{ title }} </span>
+</div>
