--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -2,12 +2,8 @@
   display: flex;
   width: 100%;
   height: 30px;
-  padding: 0 10px;
+  padding-left: 10px;
   align-items: center;
-
-  button {
-    padding: 0 2px;
-  }
 
   .grid-header-cell {
      display: flex;
@@ -44,5 +40,10 @@
 
   .grid-header-cell-menu {
     margin-left: auto !important;
+    cursor: default;
+    icc-icon {
+      width: 20px;
+      text-align: center;
+    }
   }
 }
