--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
@@ -1,7 +1,9 @@
-<ng-container *ngIf="columnsConfig$ | async as columns">
-  <icc-menu
-    [items]="getMenuItems(columns)"
-    (iccMenuItemChange)="onMenuItemChange($event, columns)"
-    >
-  </icc-menu>
+<ng-container *ngIf="gridConfig$ | async as gridConfig">
+  <ng-container *ngIf="columnsConfig$ | async as columns">
+    <icc-menu
+      [items]="getMenuItems(gridConfig, columns)"
+      (iccMenuItemChange)="onMenuItemChange($event, columns)"
+      >
+    </icc-menu>
+  </ng-container>
 </ng-container>
