--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
@@ -1,7 +1,7 @@
 <div class="grid-header-cell" (click)="headCellClick($event)">
   <div class="grid-header-cell-title" >{{ title }}</div>
 
-  <ng-container *ngIf="gridConfig.enableSort && isSortField">
+  <ng-container *ngIf="gridConfig.columnSort && isSortField">
     <div *ngIf="sortDir==='asc'" class="grid-header-cell-sort">
       <icc-icon config="caret-up" ></icc-icon>
     </div>
@@ -11,7 +11,7 @@
   </ng-container>
 </div>
 
-<ng-container>
+<ng-container *ngIf="gridConfig.columnMenu">
   <div class="grid-header-cell-menu" (click)="onClickColumnMenu($event)">
     <icc-icon config="ellipsis-v" ></icc-icon>
   </div>
