--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -13,6 +13,7 @@
 
     <icc-checkbox
     [checked]="true"
+    [disabled]="true"
     (change)="onCheckboxChange($event)"
     >
     <icc-icon config="exclamation-circle" ></icc-icon>
