--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -22,7 +22,7 @@
     >
     </icc-grid-header-cell>
 
-    <icc-column-filter *ngIf="gridConfig.columnFilter"
+    <icc-column-filter *ngIf="gridConfig.columnFilter && column.filterField !==false"
       [gridConfig]="gridConfig"
       [column]="column"
     >
