--- a/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell-view.component.scss
+++ b/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell-view.component.scss
@@ -10,5 +10,9 @@
   &.grid-cell-view-align-center {
     justify-content: center;
   }
+
+  &.grid-cell-view-align-right {
+    justify-content: right;
+  }
 }
 
