--- a/projects/icc/checkbox/src/_checkbox.component.theme.scss
+++ b/projects/icc/checkbox/src/_checkbox.component.theme.scss
@@ -38,7 +38,7 @@
     }
 
     .icc-checkbox-label:not(:empty) {
-      margin-left: 0.5rem;
+      padding-left: 0.5rem;
     }
 
     input:checked + .icc-checkbox-container {
