--- a/projects/icc/checkbox/src/checkbox.component.scss
+++ b/projects/icc/checkbox/src/checkbox.component.scss
@@ -1,12 +1,16 @@
 :host {
   display: flex;
   width: 100%;
+  padding: 0px 10px;
   label {
     display: inline-flex;
-    padding: 0.25rem 0;
     position: relative;
     align-items: center;
     cursor: pointer;
+
+    input {
+      margin: 0px;
+    }
   }
 
   icc-icon {
