--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -1,4 +1,4 @@
-<a *ngIf="menuItem.link"
+<a *ngIf="menuItem.link" class="icc-menu-item"
   [routerLink]="menuItem.link"
   [queryParams]="menuItem.queryParams"
   [routerLinkActiveOptions]="menuItem.routerOptions || {}"
@@ -17,7 +17,7 @@
   <span class="icc-menu-title"> {{ title }} </span>
 </icc-checkbox>
 
-<div *ngIf="!menuItem.link && !menuItem.checkbox" >
+<div *ngIf="!menuItem.link && !menuItem.checkbox" class="icc-menu-item">
   <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon" ></icc-icon>
   <span class="icc-menu-title"> {{ title }} </span>
 </div>
