--- a/projects/icc/menu/src/components/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.scss
@@ -1,9 +1,11 @@
 :host {
   display: flex;
   height: 32px;
-  padding: 0px 15px;
   width: 100%;
 
+  .icc-menu-item {
+    padding: 0px 10px;
+  }
 
   align-items: center;
   border-top: 1px solid gray;
@@ -34,6 +36,7 @@
     color: inherit;
     text-decoration: none;
   }
+
 /*
 ::ng-deep .icc-menu-item.menu-item-separator {
   margin-top: 0.3125rem;
