--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh);
-  width: 100%;
+  //width: 100%;
   overflow-y: hidden;
+  overflow-x: hidden;
 
   ::ng-deep {
     icc-layout-header {
