--- a/projects/icc/accordion/src/accordion.component.scss
+++ b/projects/icc/accordion/src/accordion.component.scss
@@ -1,4 +1,10 @@
 :host {
+  cdk-accordion-item { // FOR scrollbar move
+    position: relative;
+    z-index: 10;
+    background-color: #eee;
+  }
+
   .example-accordion {
     display: block;
     max-width: 500px;
